# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "kibank"
version = "1.1.2"
authors = ["Sheldon Young <sheldon@softdev.ca>"]
description = "Tool for Kilohearts banks"
license = "Apache-2.0"
homepage = "https://github.com/softdevca/kibank"
repository = "https://github.com/softdev.ca/kibank"
documentation = "https://docs.rs/kibank"
keywords = ["cli", "audio", "synth", "presets"]

edition = "2021"
rust-version = "1.61"
publish = true

[features]
default = ["application"]

# Require for the command line interface. Should be disabled when depending on
# this crate as a library. For example, to use as a library in a Cargo.toml:
# `kibank = { version = "...", default-features = false }`
application = ["anyhow", "clap", "os_str_bytes", "walkdir"]

[dependencies]
anyhow = { version = "1.0.95", optional = true }
byteorder = "1.5.0"
clap = { version = "4.5.23", optional = true, default-features = false, features = ["std", "cargo", "color", "env", "suggestions", "wrap_help"] }
log = "0.4.22"
os_str_bytes = { version = "7.0.0", optional = true, features = ["conversions"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.123"
simplelog = "0.12.2"
walkdir = { version = "2.5.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"

[package.metadata.docs.rs]
# Pass `--no-default-features` to Cargo on docs.rs
no-default-features = true
